--- a/templates/pages/billing_form.html.twig
+++ b/templates/pages/billing_form.html.twig
@@ -114,6 +114,10 @@
                         <label for="form-gift" class="form-label">Cadeau</label>
                         {{ form_widget(form.gift) }}
                     </div>
+                    <div class="form-group">
+                        <label for="form-payment" class="form-label">Mode de paiement</label>
+                        {{ form_widget(form.payment) }}
+                    </div>
                 </div>
 
                 <div id="options-container" class="items-container" data-prototype="{{ form_widget(form.options.vars.prototype)|e('html_attr') }}">
