--- a/templates/billing-template/billing-template.html.twig
+++ b/templates/billing-template/billing-template.html.twig
@@ -53,6 +53,7 @@
 
         .text-billing {
             margin: 5px 0;
+            font-size: 14px;
         }
 
         .car-table {
@@ -77,7 +78,7 @@
         .items-table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
+            margin-top: 5px;
         }
 
         .items-table th, .items-table td {
@@ -86,12 +87,29 @@
             text-align: center;
         }
 
+        .tables-container {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+        }
+
+        .observations-table {
+            width: 55%;
+            border-collapse: collapse;
+            font-size: 14px;
+        }
+
+        .observations-table td {
+            padding: 8px;
+            border: 1px solid black;
+            text-align: left;
+        }
+
         .total-table {
             width: 40%;
             border-collapse: collapse;
-            font-size: 16px;
+            font-size: 14px;
             margin-left: auto;
-            margin-top: 20px;
         }
 
         .total-table td {
@@ -116,19 +134,24 @@
 
         .main-title-in-pdf {
             text-align: center;
+            font-size: 26px;
         }
 
         .date-in-pdf {
             text-align: center;
             font-weight: bold;
-            font-size: 20px;
+            font-size: 18px;
+            margin-bottom: 20px;
         }
         .table-in-pdf {
             background-color: #d0cdcd;
         }
+        h3 {
+            margin:0px;
 
+        }
         .option-title {
-            margin-top: 30px;
+            margin-top: 20px;
         }
         .logo-container-in-pdf {
             text-align: left;
@@ -138,7 +161,7 @@
             margin: 0 auto;
         }
         .payment {
-            font-size: 18px;
+            font-size: 16px;
         }
     </style>
 </head>
@@ -274,32 +297,44 @@
     {% set netAPayer = totalTTC - reduction %}
 {% endif %}
 
-<table class="total-table">
-    <tbody>
-    <tr>
-        <td class="result-title">Total H.T</td>
-        <td class="result-billing">{{ totalHT }} €</td>
-    </tr>
-    <tr>
-        <td class="result-title">Total TVA {{ billing.tva }}%</td>
-        <td class="result-billing">{{ tva }} €</td>
-    </tr>
-    <tr>
-        <td class="result-title">Total T.T.C</td>
-        <td class="result-billing">{{ totalTTC }} €</td>
-    </tr>
-    {% if billing.discount %}
+<div class="tables-container">
+    {% if billing.observation %}
+    <table class="observations-table">
+        <tbody>
         <tr>
-            <td class="result-title">Réduction ({{ billing.discount }}%)</td>
-            <td class="result-billing">-{{ reduction }} €</td>
+            <td><strong>Observations :</strong> {{ billing.observation }}</td>
         </tr>
+        </tbody>
+    </table>
     {% endif %}
-    <tr class="net-to-pay">
-        <td class="result-title"><strong>Net à payer</strong></td>
-        <td class="result-billing"><strong>{{ netAPayer }} €</strong></td>
-    </tr>
-    </tbody>
-</table>
+
+    <table class="total-table">
+        <tbody>
+        <tr>
+            <td class="result-title">Total H.T</td>
+            <td class="result-billing">{{ totalHT }} €</td>
+        </tr>
+        <tr>
+            <td class="result-title">Total TVA {{ billing.tva }}%</td>
+            <td class="result-billing">{{ tva }} €</td>
+        </tr>
+        <tr>
+            <td class="result-title">Total T.T.C</td>
+            <td class="result-billing">{{ totalTTC }} €</td>
+        </tr>
+        {% if billing.discount %}
+            <tr>
+                <td class="result-title">Réduction ({{ billing.discount }}%)</td>
+                <td class="result-billing">-{{ reduction }} €</td>
+            </tr>
+        {% endif %}
+        <tr class="net-to-pay">
+            <td class="result-title"><strong>Net à payer</strong></td>
+            <td class="result-billing"><strong>{{ netAPayer }} €</strong></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
 <footer>
     {% if billing.payment %}
