--- a/templates/pages/billing_form.html.twig
+++ b/templates/pages/billing_form.html.twig
@@ -118,6 +118,10 @@
                         <label for="form-payment" class="form-label">Mode de paiement</label>
                         {{ form_widget(form.payment) }}
                     </div>
+                    <div class="form-group">
+                        <label for="form-payment" class="form-label">Observations</label>
+                        {{ form_widget(form.observation) }}
+                    </div>
                 </div>
 
                 <div id="options-container" class="items-container" data-prototype="{{ form_widget(form.options.vars.prototype)|e('html_attr') }}">
@@ -144,3 +148,4 @@
 
 </body>
 </html>
+
