--- a/templates/pages/billing_form.html.twig
+++ b/templates/pages/billing_form.html.twig
@@ -75,8 +75,12 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="form-client_name" class="form-label">Nom du client</label>
+                        <label for="form-client_name" class="form-label">Nom 1</label>
                         {{ form_widget(form.client_name) }}
+                    </div>
+                    <div class="form-group">
+                        <label for="form-client_name" class="form-label">Nom 2</label>
+                        {{ form_widget(form.second_name) }}
                     </div>
                     <div class="form-group">
                         <label for="form-client_address" class="form-label">Adresse (rue, avenue, etc)</label>
